src/components/TinctureChoices/_TinctureChoices.scss
.tincture-choices {
  display:flex;
  flex-direction: column;
  margin: 10px;
  // height: 400px;
  align-items: center;
}

.product-photo-and-choices {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 1000px;
}

.product-sidecar-photo {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.product-sidecar-photo-description {
  color: $viobin;
  width: 140px;
  position: relative;
  bottom: 35px;
  text-transform: uppercase;
}

.product-sidecar-choices {
  width: 700px;
}

.company-form-article {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.tims-buttons {
  display: flex;
  justify-content: space-between;
  width: 100vh;
}

.tim-back-button {
  color: #339BA4;
  background-color: #00B1AF;
  font-weight: 600;
  padding: 15px 90px;
  border: 0px;
  border-radius: 3px;
  padding-bottom: 51px;
  font-size: 1.8em;
  box-shadow: 0px 19px 30px -3px #808080;
}

.tim-forward-button {
  color: #e08428;
  background-color: #F7A01D;
  font-weight: 600;
  padding: 15px 90px;
  border: 0px;
  border-radius: 4px;
  padding-bottom: 51px;
  font-size: 1.8em;
  box-shadow: 0px 19px 30px -3px #808080;
}

.tim-back-button:hover {
  color: white;
}

.tim-forward-button:hover {
  color: white;
}



.tincture-carrier {

  button > * {
    pointer-events: none;
  }
  
  button {
    margin: auto 5px;
    border: none;
    width: 140px;
  }

  .carrier-button-logos {
    height: 80px;
  }

}

.tincture-flavors {

  button > * {
    pointer-events: none;
  }
  
  button {
    margin: auto 5px;
    border: none;
    width: 140px;
  }

  .tincture-flavor-button-icons {
    height: 80px;
  }
}

.tincture-carrier-oil {

  button {
    margin: auto 5px;
  }
}

.tincture-spectrum {

  button > * {
    pointer-events: none;
  }
  
  button {
    margin: auto 5px;
    border: none;
  }

  .spectrum-button-logos {
    height: 80px;
  }
}

.tincture-potency {
  // font-size: .8em;

  p {
    margin: 0px;
  }

  button > * {
    pointer-events: none;
  }
  
  button {
    border: 1px solid #FFFFFF;
    margin: 0px 15px;
    height: auto;
  }

  button:hover {
    border: 1px solid gray;
  }

}



.potency-big-number {
  font-size: 3em;
}

.potency-per-bottle {
  font-size: .8em;
  margin:0px;
}

button {
  font-size: 1.3em;
  margin-top: 5px;
  border: 1px solid #BFBFBF;
  height: 34px;
  cursor: pointer;
}

.tincture-congratulation-screen {

  h2 {
    font-size: 3em;
    margin: 10px auto;
  }
}

